INTYG-5496: Stylat om alla knappar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -37,37 +37,23 @@
     <!-- Vårdadmin -->
     <div wc-authority="!SIGNERA_INTYG">
 
-      <!-- Signera intyg -->
-      <h3 >
-        <span dynamic-label key="common.sign.intyg"></span>
-      </h3>
-
-      <!-- Endast läkare får signera -->
-      <wc-alert-message id="sign-requires-doctor-message-text"
-                        intygstyp="{{viewState.common.intyg.type}}"
-                        alert-severity="info"
-                        alert-message-id="draft.onlydoctorscansign"></wc-alert-message>
-
-      <!-- check for missing info in utkast -->
-      <div class="form-group">
-        <button type="button" id="show-missing-btn" class="btn btn-primary"
-                ng-keydown="initValidationSequence('show-missing-btn')"
-                ng-mousedown="initValidationSequence('show-missing-btn')"
-                ng-click="checkMissing()"
-                ng-disabled="viewState.common.intyg.isComplete">
-          <span dynamic-label key="draft.notify.check-missing"></span>
-        </button>
-        <span wc-help-chevron help-text-key="draft.notify.check-missing.help"></span>
-        <span wc-help-chevron-text help-text-key="draft.notify.check-missing.help"></span>
-      </div>
-
-
-
       <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
-      <div wc-authority="NOTIFIERING_UTKAST" intygstyp="{{viewState.common.intyg.type}}">
-        <button ng-if="!viewState.klartForSigneringDatum" type="button" id="markeraKlartForSigneringButton" class="btn btn-primary" ng-click="notifieraUtkast()">
-          <span dynamic-label key="draft.notifyready.button"></span>
-        </button>
+      <div wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}">
+        <wc-button
+            data-ng-if="!viewState.klartForSigneringDatum"
+            btn-id="markeraKlartForSigneringButton"
+            btn-class="btn-success"
+            btn-click="notifieraUtkast()"
+            tooltip="{{::readyForSignBtnTooltip}}"
+        >
+          <i class="material-icons">check</i> {{::readyForSignBtnText}}
+        </wc-button>
+
+        <wc-alert-message ng-if="viewState.klartForSigneringDatum"
+                          alert-severity="success"
+                          alert-message-id="draft.notifyready.text">
+        </wc-alert-message>
+
         <div ng-if="viewState.klartForSigneringDatum">
           <span class="glyphicon glyphicon-check ng-scope"></span>
           <span id="draft-marked-ready-text" dynamic-label key="draft.notifyready.text"></span>
@@ -75,28 +61,30 @@
       </div>
 
 
-
       <!-- Notifiera läkare genom att vidarebefordra -->
-      <div wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{viewState.common.intyg.type}}">
-        <div class="form-group">
-          <button type="button" id="vidarebefordraEjHanterad" class="btn"
-                  ng-class="{'btn-primary': !viewState.draftModel.vidarebefordrad, 'btn-secondary' : viewState.draftModel.vidarebefordrad}"
-                  ng-click="vidarebefordraUtkast()"><span class="glyphicon glyphicon-share-alt"
-                ng-class="{'forward-active': !viewState.draftModel.vidarebefordrad, 'forward-inactive': viewState.draftModel.vidarebefordrad}"></span>
-             <span dynamic-label key="draft.notify.button"></span>
-          </button>
-          <span wc-help-chevron help-text-key="draft.notify.help"></span>
-          <span wc-help-chevron-text help-text-key="draft.notify.help"></span>
-        </div>
+      <div class="admin-row" wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{::viewState.common.intyg.type}}">
+        <wc-button
+            btn-id="vidarebefordraEjHanterad"
+            btn-class="btn-success"
+            btn-click="vidarebefordraUtkast()"
+            tooltip="{{::forwardBtnTooltip}}"
+          >
+          {{::forwardBtnText}}
+        </wc-button>
 
-        <div class="intyg-block">
-          <label for="mark-as-vidarebefordrad">
-            <input id="mark-as-vidarebefordrad" type="checkbox" ng-disabled="viewState.common.vidarebefordraInProgress"
-                   ng-model="viewState.draftModel.vidarebefordrad" ng-change="onVidarebefordradChange()" />
-            Vidarebefordrad
-          </label> <span ng-if="viewState.common.vidarebefordraInProgress"> <img
-            src="/img/ajax-loader-kit-16x16.gif"></span>
-        </div>
+        <button type="button" id="show-missing-btn" class="btn btn-primary"
+                ng-keydown="initValidationSequence('show-missing-btn')"
+                ng-mousedown="initValidationSequence('show-missing-btn')"
+                ng-click="checkMissing()"
+                ng-disabled="viewState.common.intyg.isComplete">
+          <span dynamic-label key="draft.notify.check-missing"></span>
+        </button>
+
+        <wc-checkbox-wrapper>
+          <input id="mark-as-vidarebefordrad" type="checkbox" ng-disabled="viewState.common.vidarebefordraInProgress"
+                 ng-model="viewState.draftModel.vidarebefordrad" ng-change="onVidarebefordradChange()" />
+          <label for="mark-as-vidarebefordrad">Vidarebefordrad</label>
+        </wc-checkbox-wrapper>
       </div>
     </div>
 
