INTYG-5431: Styling av wc-utkast-error-summary direktiv enligt WC 6.0

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -36,8 +36,11 @@
           </div>
           <!-- certificate -->
 
-          <wc-utkast-error-summary category-ids="categoryIds"
-                                   view-state="viewState"></wc-utkast-error-summary>
+          <wc-utkast-error-summary
+              categories="viewState.common.validation.sections"
+              category-ids="categoryIds">
+          </wc-utkast-error-summary>
+
           <div ui-view="footer"></div>
 
         </wc-spinner>
