--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
@@ -1,28 +1,30 @@
-<div id="{{dialogId}}" class="modal-header">
-	<button type="button" class="close" ng-click="button2click()">×</button>
-	<h3 ng-focus="model.focus" tabindex="-1">
-		<span dynamic-label key="{{titleId}}"></span>
-	</h3>
-</div>
-<div class="modal-body">
-	<div style="padding-bottom: 10px"><span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span></div>
-</div>
-<div class="modal-footer">
-  <div class="form-inline">
-    <button type="button" id="{{button1id}}" class="btn btn-primary" ng-disabled="!model.acceptprogressdone" ng-click="button1click()">
-      <img ng-hide="model.acceptprogressdone" ng-src="/img/ajax-loader-small-green.gif"/>
-      <span dynamic-label key="{{button1text}}"></span>
-    </button>
-    <button type="button" id="{{button2id}}" class="btn btn-secondary" ng-click="button2click()">
-      <span dynamic-label key="{{button2text}}"></span>
-    </button>
-    <button type="button" id="{{button3id}}" ng-show="button3visible" class="btn btn-secondary" ng-click="button3click()">
-      <span dynamic-label key="{{button3text}}"></span>
-    </button>
-    <div class="webcert-top-padding-section" ng-show="model.showerror">
-      <wc-alert-message alert-severity="danger" class="alert-dialog-error"
-                        alert-message-id="{{model.errormessageid}}">
-      </wc-alert-message>
+<div class="intyg-send">
+    <div id="{{dialogId}}" class="modal-header">
+        <button type="button" class="close" ng-click="button2click()"><i class="material-icons">close</i></button>
+        <h3 ng-focus="model.focus" tabindex="-1">
+            <span dynamic-label key="{{titleId}}"></span>
+        </h3>
     </div>
-  </div>
+    <div class="modal-body">
+        <span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span>
+    </div>
+    <div class="modal-footer">
+      <div class="form-inline">
+        <button type="button" id="{{button1id}}" class="btn btn-primary" ng-disabled="!model.acceptprogressdone" ng-click="button1click()">
+          <img ng-hide="model.acceptprogressdone" ng-src="/img/ajax-loader-small-green.gif"/>
+          <span dynamic-label key="{{button1text}}"></span>
+        </button>
+        <button type="button" id="{{button2id}}" class="btn btn-secondary" ng-click="button2click()">
+          <span dynamic-label key="{{button2text}}"></span>
+        </button>
+        <button type="button" id="{{button3id}}" ng-if="button3visible" class="btn btn-secondary" ng-click="button3click()">
+          <span dynamic-label key="{{button3text}}"></span>
+        </button>
+        <div class="webcert-top-padding-section" ng-show="model.showerror">
+          <wc-alert-message alert-severity="danger" class="alert-dialog-error"
+                            alert-message-id="{{model.errormessageid}}">
+          </wc-alert-message>
+        </div>
+      </div>
+    </div>
 </div>
