INTYG-5496: Lagt till label stöd i wcToggle

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterNotify/wcUtkastFooterNotify.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterNotify/wcUtkastFooterNotify.directive.html
@@ -9,12 +9,11 @@
     <i class="material-icons">check</i> {{::readyForSignBtnText}}
   </wc-button>
 
-  <div data-ng-if="!viewState.common.intyg.isComplete && !viewState.klartForSigneringDatum" class="complete-info">
-    <wc-toggle
-        toggle-id="show-missing-btn"
-        model="showMissing.value"></wc-toggle>
-    <label for="show-missing-btn">Visa vad som saknas</label>
-  </div>
+  <wc-toggle
+      data-ng-if="!viewState.common.intyg.isComplete && !viewState.klartForSigneringDatum"
+      toggle-id="show-missing-btn"
+      model="showMissing.value"
+      label="{{::checkMissingLabel}}"></wc-toggle>
 
   <wc-alert-message ng-if="viewState.klartForSigneringDatum"
                     alert-severity="success"
