INTYG-5589: Ny design för kompletteringsbegäran i utkast och intygsvyerna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
@@ -1,7 +1,9 @@
 <div ng-if="getKompletteringar().length > 0">
-  <wc-alert-message ng-repeat="komplettering in getKompletteringar()"
-       alert-severity="warning"
-       ng-attr-id="{{'inline-komplettering-' + frageId + '-' + $index}}">
-    <span class="inline-komplettering-text"><b>Kompletteringsbegäran: </b>{{komplettering.text}}</span>
-  </wc-alert-message>
+  <wc-bottom-fadeout color="02" ng-repeat="komplettering in getKompletteringar()">
+    <wc-alert-message
+         alert-severity="komplettering"
+         ng-attr-id="{{'inline-komplettering-' + frageId + '-' + $index}}">
+        <div class="inline-komplettering-text"><strong>Kompletteringsbegäran: </strong><p>{{komplettering.text}}</p></div>
+    </wc-alert-message>
+  </wc-bottom-fadeout>
 </div>
