--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
@@ -8,5 +8,5 @@
     </h3>
     <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
   </div>
-  <ue-render-components form="::form" config="::config.components" model="::model" />
+  <ue-render-components class="ue-kategori__body" form="::form" config="::config.components" model="::model" />
 </div>
