INTYG-5496: Loading spinner på markera klar för signering

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterSign/wcUtkastFooterSign.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterSign/wcUtkastFooterSign.directive.html
@@ -1,3 +1,7 @@
+<p ng-if="isSignAndSend()">
+  <span dynamic-label key="{{::viewState.common.intyg.type}}.label.signandsend"></span>
+</p>
+
 <p ng-show="viewState.common.intyg.isKomplettering">
   <span dynamic-label key="draft.completion.signinfo"></span>
 </p>
