--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterNotify/wcUtkastFooterNotify.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterNotify/wcUtkastFooterNotify.directive.html
@@ -1,9 +1,16 @@
+<wc-alert-message ng-if="notifyError"
+                  alert-severity="success"
+                  alert-id="draft-marked-ready-text"
+                  alert-message-id="draft.notifyready.text">
+</wc-alert-message>
+
 <div class="admin-row">
   <wc-button
       data-ng-if="!viewState.klartForSigneringDatum"
       btn-id="markeraKlartForSigneringButton"
       btn-class="btn-success"
       btn-click="notifieraUtkast()"
+      loading="loading"
       tooltip="{{::readyForSignBtnTooltip}}"
   >
     <i class="material-icons">check</i> {{::readyForSignBtnText}}
@@ -17,6 +24,7 @@
 
   <wc-alert-message ng-if="viewState.klartForSigneringDatum"
                     alert-severity="success"
+                    alert-id="draft-marked-ready-text"
                     alert-message-id="draft.notifyready.text">
   </wc-alert-message>
 </div>
