INTYG-5614: Inline headers (patientheader, utkasheader, intygheader) skall följa samma maxwidth 1440 regler som sidheader/menyn. Även lagat boxshadow på headers

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,5 +1,5 @@
-<div ui-view="header"></div>
-<div class="webcert-workarea-hflex-container">
+<div ui-view="header" class="intyg-header-container"></div>
+<div class="webcert-workarea-hflex-container centered-constrained-content">
 
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid" ng-show="!viewState.common.activeErrorMessageKey">
