--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -1,5 +1,5 @@
 <!-- Utkastheader -->
-<div ui-view="header"></div>
+<div ui-view="header" class="intyg-header-container"></div>
 
 
 <!-- TODO: whats this - should be moved into header? -->
@@ -11,7 +11,7 @@
 </div>
 
 
-<div class="webcert-workarea-hflex-container" id="edit-{{viewState.common.intyg.type}}">
+<div class="webcert-workarea-hflex-container centered-constrained-content" id="edit-{{viewState.common.intyg.type}}">
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid edit-form">
 
