--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusModal.template.html
@@ -1,8 +1,9 @@
 <div class="modal-header">
-  <h3>{{header}}</span></h3>
+  <button type="button" class="close" ng-click="button2click()"><i class="material-icons">close</i></button>
+  <h3>{{header}}</h3>
 </div>
 <div class="modal-body" ng-bind-html="body">
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
+  <button type="button" class="btn btn-default" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
