--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusModal.template.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <button type="button" class="close" ng-click="button2click()"><i class="material-icons">close</i></button>
+  <button type="button" class="close" ng-click="$close()"><i class="material-icons">close</i></button>
   <h3>{{header}}</h3>
 </div>
 <div class="modal-body" ng-bind-html="body">
