INTYG-5243: Visar nu nytt personnummer från journalsystemet i intygsheadern

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -56,7 +56,8 @@
           <h3 class="page-heading2"
               wc-intyg-patient-namn-personnummer
               patient-name="intygViewState.intygModel.grundData.patient.fullstandigtNamn"
-              person-id="intygViewState.intygModel.grundData.patient.personId">
+              person-id="personId"
+              old-person-id="oldPersonId">
           </h3>
           <!-- Patient status -->
           <wc-patient-status is-intyg="true" patient="intygViewState.intygModel.grundData.patient" intyg-model="intygViewState.intygModel" intyg-properties="intygViewState.common.intygProperties"></wc-patient-status>
