INTYG-5700: Visa fk7263 utkast mha uv-ramverket (så som signerade intyg)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,5 +1,5 @@
 <div ui-view="header" class="intyg-header-container"></div>
-<div class="webcert-workarea-hflex-container centered-constrained-content">
+<div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intyg.type}}">
 
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid" ng-show="!viewState.common.activeErrorMessageKey">
