INTYG-5514: Add observandum text and styling

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
@@ -6,6 +6,7 @@
         </h3>
     </div>
     <div class="modal-body">
+        <span dynamic-label key="{{bodyText}}"></span>
         <span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span>
     </div>
     <div class="modal-footer">
