INTYG-5701: Lagt till wc-deprecated-intygstype-message direktiv i utkast-header, intygs-header samt ärende-högerflik. Om modulen har moduleentrypoint-propertyn deprecated=true, visas en info-alertmessage med texter där.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
@@ -35,6 +35,8 @@
       </div>
     </div>
 
+    <wc-deprecated-intygstype-message message-suffix="utkastheader" intygs-type="{{::utkastViewState.common.intyg.type}}"></wc-deprecated-intygstype-message>
+
     <!-- Total fail error messages -->
     <div id="error-panel" class="intyg-error-panel"
          ng-show="utkastViewState.common.doneLoading && utkastViewState.common.error.activeErrorMessageKey && !utkastViewState.common.deleted">
