--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -67,6 +67,7 @@
           <wc-intyg-button-bar view-state="intygViewState"></wc-intyg-button-bar>
         </div>
       </div>
+      <wc-deprecated-intygstype-message message-suffix="intygheader" intygs-type="{{::intygViewState.common.intygProperties.type}}"></wc-deprecated-intygstype-message>
     </div>
   </div>
 </div>
