INTYG-5650: Rättat felaktigt attributnamn (intygType -> intygstyp) för wc-authority användning i wc-intyg-buttonbar som gjorde att förnya alltid var tillgänglig oavsett intygstyp.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -1,7 +1,7 @@
 <div class="white-space-no-wrap">
 
   <button type="button"
-          intygType="{{intygType}}"
+          intygstyp="{{intygType}}"
           id="createFromTemplateBtn"
           class="btn btn-success"
           ng-if="IntygHeaderService.showCreateFromTemplate()"
@@ -21,7 +21,7 @@
           class="btn btn-primary"
           wc-authority feature="SKICKA_INTYG"
           request-origin="!UTHOPP"
-          intygType="{{intygType}}"
+          intygstyp="{{intygType}}"
           wc-check-vardenhet vardenhet="{{viewState.enhetsId}}"
           ng-if="showSkickaButton()"
           ng-click="send()">
@@ -32,7 +32,7 @@
           type="button"
           id="downloadprint"
           class="btn btn-primary"
-          intygType="{{intygType}}"
+          intygstyp="{{intygType}}"
           ng-click="print(viewState.intygModel, false)"
           uib-popover="{{normalPrintBtnTooltipText}}"
           popover-trigger="mouseenter"
@@ -82,7 +82,7 @@
   <button type="button"
           wc-authority="FORNYA_INTYG"
           request-origin="!UTHOPP"
-          intygType="{{intygType}}"
+          intygstyp="{{intygType}}"
           id="fornyaBtn"
           class="btn btn-primary"
           ng-if="showFornyaButton()"
@@ -98,7 +98,7 @@
   <button type="button"
           wc-authority="ERSATTA_INTYG"
           request-origin="!UTHOPP"
-          intygType="{{intygType}}"
+          intygstyp="{{intygType}}"
           id="ersattBtn"
           class="btn btn-primary"
           ng-if="showErsattButton()"
@@ -116,7 +116,7 @@
   <button type="button"
           wc-authority="MAKULERA_INTYG"
           request-origin="!UTHOPP"
-          intygType="{{intygType}}"
+          intygstyp="{{intygType}}"
           id="makuleraBtn"
           class="btn btn-secondary"
           ng-if="!CommonIntygViewState.isRevoked()"
