INTYG-5554: Lagt till så vi scrollar tillbaka till knappen efter valideringsmeddelanden ändras

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -1,4 +1,4 @@
-<div id="utkast-footer" class="utkast-footer">
+<div id="utkast-footer" class="utkast-footer" ng-mousedown="initValidationSequence()">
   <!-- Läkare: Signera -->
   <wc-utkast-footer-sign
       wc-authority="SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}"
