INTYG-5496: wcButton kan inte få fokus i ie11

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterNotify/wcUtkastFooterNotify.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterNotify/wcUtkastFooterNotify.directive.html
@@ -11,7 +11,7 @@
       btn-class="btn-success"
       btn-click="notifieraUtkast()"
       loading="loading"
-      tooltip="{{::readyForSignBtnTooltip}}"
+      btn-tooltip="{{::readyForSignBtnTooltip}}"
   >
     <i class="material-icons">check</i> {{::readyForSignBtnText}}
   </wc-button>
