--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterVidarebefodra/wcUtkastFooterVidarebefodra.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/wcUtkastFooterVidarebefodra/wcUtkastFooterVidarebefodra.directive.html
@@ -3,7 +3,7 @@
       btn-id="vidarebefordraEjHanterad"
       btn-class="btn-success"
       btn-click="vidarebefordraUtkast()"
-      tooltip="{{::forwardBtnTooltip}}"
+      btn-tooltip="{{::forwardBtnTooltip}}"
   >
     <i class="icon-wc-ikon-reply"></i>
     {{::forwardBtnText}}
