INTYG-5714: Tagit bort z-index som gjorde att IE blinkade när man scrolla i intyget

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,4 +1,4 @@
-<div ui-view="header" class="intyg-header-container"></div>
+<div ui-view="header"></div>
 <div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intyg.type}}">
 
 
