--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -1,5 +1,5 @@
 <!-- Utkastheader -->
-<div ui-view="header" class="intyg-header-container"></div>
+<div ui-view="header"></div>
 
 
 <!-- TODO: whats this - should be moved into header? -->
